# rust-app-template

./: .dockerignore  .gitignore  .goreleaser.yml  .helmignore  Cargo.toml  Makefile  README-TEMPLATE.md  README.md
.cloudopsworks/: cloudopsworks-ci.yaml  cloudopsworks-ci.yaml.tftpl  gitversion_gitflow.yaml
.cloudopsworks/vars/: inputs-APPENGINE.yaml  inputs-BEANSTALK-ENV.yaml  inputs-CLOUDRUN.yaml  inputs-KUBERNETES-ENV.yaml  inputs-LAMBDA-ENV.yaml  inputs-global.yaml
.cloudopsworks/vars/helm/: values-dev.yaml  values-prod.yaml  values-uat.yaml
.github/: cloudopsworks-ci.yaml  labeler.yml
.github/vars/: inputs-KUBERNETES-ENV.yaml  inputs-LAMBDA-ENV.yaml  inputs-global.yaml
.github/vars/apigw/: apis-dev.yaml  apis-prod.yaml  apis-uat.yaml
.github/vars/helm/: values-dev.yaml  values-prod.yaml  values-uat.yaml
.github/workflows/: automerge.yml  deploy-blue-green.yml  deploy-container.yml  deploy.yml  environment-destroy.yml  environment-unlock.yml  main-build.yml  patch-management.yml  pr-build.yml  pr-close.yaml  process-owners.yml  scan.yml  slash-commands.yml  slash-on-approve.yml  slash-on-retry-automerge.yml
src/: lib.rs  main.rs  routes.rs
src/handlers/: health.rs  hello.rs  mod.rs
src/models/: response.rs
tests/: integration_tests.rs
