[package]
name = "hello-api"
version = "0.1.0"
authors = ["cloudopsworks"]
edition = "2021"
description = "A simple HTTP API service with hello world and health endpoints"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
serde_json = "1.0.140"
