[package]
name = "hello-api"
version = "0.0.1-snapshot"
authors = ["cloudopsworks"]
edition = "2021"
description = "A simple HTTP API service with hello world and health endpoints"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

# Binary profile
[profile.release]
opt-level = 3
lto = true
debug = false

[profile.dev]
opt-level = 0

# Binaries
[[bin]]
name = "hello-api"
path = "src/main.rs"
